# vizcab-backend-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: batiments.json  construction_elements.json  usages.json  zones.json
vizcab/: manage.py
vizcab/scripts/: import_data_from_json.py
vizcab/vizcab/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
vizcab/vizcab/migrations/: 0001_initial.py  0002_zoneproduct_zone_products.py  0003_remove_building_usage.py
vizcab/vizcab/tests/: factories.py  test_building.py  test_building_surface.py  test_zones.py
